# Monopoly

./: CMakeLists.txt  House.H  House.cpp  House.h  README.md  Test.cpp  build.sh
include/: Boardspace.h  House.h  Pieces.h  Player.h
main/: main.cpp
src/: House.cpp  InitializeMonopoly.cpp  Pieces.cpp
